feat(ops): safely delete managed instances
